[package]
name = "rust_chess"
version = "0.1.0"
authors = ["Jonathan Heek <heekjonathan@gmail.com>"]

[dependencies]
ws = "0.7.8"
chess = "1.0.4"

serde = "1.0.76"
serde_json = "1.0.26"
serde_derive = "1.0.76"

atomic-option = "0.1.2"

lazy_static = "1.1.0"

[profile.release]
lto = true
debug = false