[package]
name = "rust_chess"
version = "0.1.0"
authors = ["Jonathan Heek <heekjonathan@gmail.com>"]
# edition = '2018'

[dependencies]
chess = "1.0.4"

serde = "1.0.76"
serde_json = "1.0.26"
serde_derive = "1.0.76"

atomic-option = "0.1.2"

lazy_static = "1.1.0"

futures = "0.1.23"
tungstenite = "0.6.0"
tokio = "0.1.8"
tokio-tungstenite = "0.6.0"

[profile.release]
lto = true